Fixed menu spacing on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
 h1 {
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
-    margin-bottom: 5px !important;
+    margin-bottom: 15px !important;
     font-size: 3em !important;
     transition: all 0.5s;
 }
@@ -89,7 +89,7 @@ p {
     }
 
     #menu {
-        width: 80%;
+        width: 65%;
         text-align: center;
         margin: auto;
     }
